k8s/networking/cilium-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: app
spec:
  description: "Default deny all traffic"
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-my-app-ingress
  namespace: app
spec:
  description: "Allow ingress traffic to my-app"
  endpointSelector:
    matchLabels:
      app: my-app
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: istio-ingressgateway
        k8s:app.kubernetes.io/instance: istio
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/health"
        - method: "GET"
          path: "/api.*"
        - method: "POST"
          path: "/api.*"
  - fromEndpoints:
    - matchLabels:
        app: my-app
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-my-app-egress-db
  namespace: app
spec:
  description: "Allow my-app to access PostgreSQL"
  endpointSelector:
    matchLabels:
      app: my-app
  egress:
  - toEndpoints:
    - matchLabels:
        app: postgres
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-my-app-egress-cache
  namespace: app
spec:
  description: "Allow my-app to access Redis cache"
  endpointSelector:
    matchLabels:
      app: my-app
  egress:
  - toEndpoints:
    - matchLabels:
        app: redis
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-my-app-egress-dns
  namespace: app
spec:
  description: "Allow my-app to access DNS"
  endpointSelector:
    matchLabels:
      app: my-app
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-database-ingress
  namespace: infrastructure
spec:
  description: "Allow PostgreSQL database ingress"
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: my-app
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cache-ingress
  namespace: infrastructure
spec:
  description: "Allow Redis cache ingress"
  endpointSelector:
    matchLabels:
      app: redis
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: my-app
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: app
spec:
  description: "Deny all traffic from other namespaces by default"
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: app
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-monitoring-scrape
  namespace: app
spec:
  description: "Allow Prometheus to scrape metrics"
  endpointSelector:
    matchLabels:
      app: my-app
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: prometheus
    toPorts:
    - ports:
      - port: "9090"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-sidecar-traffic
  namespace: app
spec:
  description: "Allow Istio sidecar proxy traffic"
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: my-app
    toPorts:
    - ports:
      - port: "15000"
        protocol: TCP
      - port: "15001"
        protocol: TCP
      - port: "15006"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        app: my-app
    toPorts:
    - ports:
      - port: "15000"
        protocol: TCP
      - port: "15001"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-api
  namespace: app
spec:
  description: "Allow kubelet API access"
  endpointSelector: {}
  egress:
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-apiserver
  namespace: app
spec:
  description: "Allow Kubernetes API server access"
  endpointSelector: {}
  egress:
  - toEntities:
    - cluster
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
